--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^4.3.95",
     "axios": "^0.19.0",
     "buefy": "^0.8.3",
+    "debounce": "^1.2.0",
     "google-maps": "^3.3.0",
     "vue": "^2.5.2",
     "vue-carousel": "^0.18.0",
